[package]
name = "ubs-lib"
version = "0.1.0"

edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
tl = "0.7.7"
hyper = { version = "0.14.27", features = ["client", "http1"] }
cookie = "0.17.0"
futures = "0.3.28"
chrono = "0.4.26"
thiserror = "1.0.44"
regex = "1.9.1"

# hyper-rustls = { version = "0.23.2", optional = true }
hyper-rustls = { version = "0.24.1" }

[dev-dependencies]
tokio = { version = "1.29.0", features = [
    "rt",
    "macros",
], default-features = false }

[features]
# Enables SIMD accelerated parsing for HTML (requires nightly)
simd = ["tl/simd"]
# Enables easy HTTPS client creation
# TODO: remove http1 feature from hyper main dep
# client = ["hyper-rustls", "hyper/http1"]
