[package]
name = "ubs-lib"
version = "0.1.1"
description = "a library for fetching real-time University at Buffalo class schedules"
documentation = "https://docs.rs/ubs-lib"

edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
tl = "0.7.7"
hyper = { version = "0.14.27", features = ["client"] }
cookie = "0.17.0"
futures = "0.3.28"
chrono = "0.4.26"
thiserror = "1.0.44"
regex = "1.9.2"

hyper-rustls = { version = "0.24.1", optional = true }
serde = { version = "1.0.181", features = ["derive"], optional = true }

[dev-dependencies]
tokio = { version = "1.29.1", features = [
  "rt",
  "macros",
], default-features = false }

[features]
default = ["rustls"]
# Enables SIMD accelerated parsing for HTML (requires nightly).
# simd = ["tl/simd"]
# Enables high-level schedule iterators using rustls for TLS.
rustls = ["hyper-rustls"]
# Enables serde support for serializing/deserializing models.
serde_support = ["serde"]
