[package]
name = "ubs-lib"
version = "0.1.1"
description = "a library for fetching real-time University at Buffalo class schedules"
documentation = "https://docs.rs/ubs-lib"
build = "build.rs"

edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
tl = "0.7.7"
hyper = { version = "0.14.27", features = ["client"] }
cookie = "0.18.0"
futures = "0.3.28"
chrono = "0.4.31"
thiserror = "1.0.49"
regex = "1.10.2"

hyper-rustls = { version = "0.24.1", optional = true }
serde = { version = "1.0.189", features = ["derive"], optional = true }

[build-dependencies]
csv = "1.3.0"
quote = "1.0.33"
proc-macro2 = "1.0.69"
syn = "2.0.38"
prettyplease = "0.2.14"
convert_case = "0.6.0"  # TODO: don't really need this

[dev-dependencies]
tokio = { version = "1.33.0", features = [
  "rt",
  "macros",
], default-features = false }

[features]
default = ["rustls"]
# Enables SIMD accelerated parsing for HTML (requires nightly).
# simd = ["tl/simd"]
# Enables high-level schedule iterators using rustls for TLS.
rustls = ["hyper-rustls"]
# Enables serde support for serializing/deserializing models.
serde_support = ["serde"]
