[package]
name = "ubs"
version = "0.1.0"
description = "a CLI for fetching real-time University at Buffalo class schedules"

edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
thiserror = "1.0.44"
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
ubs-lib = { path = "../ubs-lib" } # TODO: temporary
chrono = { version = "0.4.26", features = ["serde"] }
futures = "0.3.28"
tokio = { version = "1.29.1", features = [
  "rt",
  "macros",
], default-features = false }
syntect = { version = "5.1.0", optional = true }
# miette = { version = "5.10.0", features = ["fancy"] }

[features]
default = ["color"]
# Enables syntax highlighting when `--pretty` is specified.
color = ["syntect"]
