[package]
name = "ubs"
version = "0.1.1"
description = "a CLI for fetching real-time University at Buffalo class schedules"
documentation = "https://docs.rs/ubs"

edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
thiserror = "1.0.49"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
# ubs-lib = { version = "0.1.0", features = ["serde"] } #, features = ["simd"] }
ubs-lib = { path = "../ubs-lib", features = [
  "serde_support",
] } #, features = ["simd"] }
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3.28"
tokio = { version = "1.33.0", features = [
  "rt",
  "macros",
], default-features = false }
syntect = { version = "5.1.0", optional = true }
# miette = { version = "5.10.0", features = ["fancy"] }

[features]
default = ["color"]
# Enables syntax highlighting when `--pretty` is specified.
color = ["syntect"]
